# aristo_design

./: db.sqlite3  manage.py  pyproject.toml
aristo/: settings.py  urls.py
locale/ar/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.mo  django.po
locale/fr/LC_MESSAGES/: django.mo  django.po
main/: admin.py  apps.py  context_processors.py  models.py  translation.py  urls.py  views.py
static/css/: styles.css
templates/: base.html
templates/pages/: about.html  blog_detail.html  blogs.html  contact.html  home.html  project_detail.html  project_list.html  social.html
templates/partials/: _footer.html  _go_top.html  _header.html  _mobile_menu.html  announcement_bar.html
templates/partials/home/: _blogs.html  _contact.html  _gallery.html  _info.html  _marquee.html  _projects.html  _slider.html
